appId: com.renlyst.app.next
---
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          id: 'com.google.android.providers.media.module:id/icon_thumbnail'
          optional: true
      - tapOn:
          id: 'com.google.android.documentsui:id/thumbnail'
          optional: true
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          text: 'Photo, .*'
          index: 0
      - tapOn:
          text: 'Done'
